fix data sheet height on mobile

--- a/src/app/data-sheet/data-sheet.component.less
+++ b/src/app/data-sheet/data-sheet.component.less
@@ -88,7 +88,7 @@
   :host.visible {
     padding-top: 1rem;
     padding-bottom: 3rem;
-    max-height: 160rem;
+    max-height: 230rem;
   }
 
   .flex {
